[gd_scene load_steps=5 format=3 uid="uid://x03e20t6txss"]

[ext_resource type="Script" path="res://screens/game/game.gd" id="1_b4tnn"]
[ext_resource type="PackedScene" uid="uid://brvkk4mplduis" path="res://scale/scale.tscn" id="1_lebfw"]
[ext_resource type="Texture2D" uid="uid://bp0omsnv681vi" path="res://screens/game/images/pause.png" id="2_c0ynh"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_5b2na"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b4tnn")

[node name="LevelBorder" type="Area2D" parent="."]
monitorable = false

[node name="Top" type="CollisionShape2D" parent="LevelBorder"]
position = Vector2(960, 30)
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_5b2na")

[node name="Bottom" type="CollisionShape2D" parent="LevelBorder"]
position = Vector2(960, 1050)
shape = SubResource("WorldBoundaryShape2D_5b2na")

[node name="PauseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -108.0
offset_top = -132.0
offset_right = -8.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
icon = ExtResource("2_c0ynh")

[node name="Sawblades" type="Node" parent="."]

[node name="Blocks" type="Node" parent="."]

[node name="Scale" parent="." instance=ExtResource("1_lebfw")]
position = Vector2(960, 570)

[node name="Ceiling" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 7.0
color = Color(0.466667, 0.466667, 0.466667, 1)

[node name="Floor" type="ColorRect" parent="."]
offset_top = 1073.0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.466667, 0.466667, 0.466667, 1)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="body_entered" from="LevelBorder" to="." method="_on_level_border_body_entered"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
